Fixed auth, prepping for Genie

--- a/app.yaml
+++ b/app.yaml
@@ -1,8 +1,12 @@
 command: ["streamlit", "run", "app/main.py", "--server.address", "0.0.0.0"]
 
 env:
+  - name: DATABRICKS_AUTH_TYPE
+    value: "pat"
+
   - name: PYTHONPATH
     value: "."
+    
   - name: WAREHOUSE_ID
     valueFrom: sql-warehouse
 
